--- a/index.html
+++ b/index.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hi Everyone!!</title>
+  <title>Hernandez</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>Hi Everyone!!</h1>
-  <p>Isn't html amazing? oh my, oh my</p>
+  <h1>Karol Hernandez</h1>
+  <h2>Game Programmer</h2>
+  
+  <div id="category">
+    
+    <a href="index.html">
+        <button> Home</button>
+      </a>
+
+      <a href="utilityPage.html">
+        <button> Bio/Contact</button>
+      </a>
+ 
+      <a href="projectPage.html">
+        <button> Project 1</button>
+      </a>
+    
+      <a href="projectPage.html">
+        <button> Project 2</button>
+      </a>
+
+      <a href="projectPage.html">
+        <button> Project 3</button>
+      </a>
+  </div>
+
+  <p id="paragraph1">Hello! My name is Karol Hernandez and I'am an up and coming game developer. 
+    I have talents when it comes to programming the gameplay of a variety of game genres. 
+    I don't like to exactly tether to just programming one type of game, I love to expand my horizons on many things.
+    Which so happens to include game development. I have done multiple genres under my belt, which will be shown with the projects 
+    that I have listed below. This will show my greatest 3 game projects that I have worked on from my experience as a game programmer. 
+    Thank you for being here!
+  </p>
+
+  <div class="img_container">
+    <img src="placeHolder.png" height="300">
+  </div>
+
+  <p id="caption">
+    <b>Project 1</b>
+  </p>
+
+   <div class="img_container">
+    <img src="placeHolder.png" height="300">
+  </div>
+
+   <p id="caption">
+    <b>Project 2</b>
+  </p>
+
+   <div class="img_container">
+    <img src="placeHolder.png" height="300">
+  </div>
+
+   <p id="caption">
+    <b>Project 3</b>
+  </p>
 </body>
 </html>
